--- a/dashboard/tpl/header.html
+++ b/dashboard/tpl/header.html
@@ -61,7 +61,7 @@
             </ul>
         </div>
         <!-- END TOP NAVIGATION MENU -->
-       <!--  <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse"> </a> -->
+        <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse"> </a>
 
     </div>
     <!-- END PAGE TOP -->
