去点击效果

--- a/dashboard/tpl/header.html
+++ b/dashboard/tpl/header.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
 
-        <div class="btn-group m-t-sm" ng-hide="!settings.layout.setLabButton">
+        <div class="btn-group m-t-sm no-btn-active" ng-hide="!settings.layout.setLabButton">
             <button type="button" class="btn btn-circle btn-outline white">
                 <span ng-bind="labName">实验室选择&nbsp;</span>&nbsp;
             </button>
