--- a/dashboard/tpl/header.html
+++ b/dashboard/tpl/header.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="dropdown">
-                    <span href="#" class="font-white">登入时间:
+                    <span href="#" class="font-white">
                     <span ng-bind="time">2016年9月28日</span>
                     </span>
                 </li>
