--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -137,6 +137,9 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src="../assets/global/plugins/backstretch/jquery.backstretch.min.js" type="text/javascript"></script>
         <script src='../assets/global/plugins/moment.min.js' type="text/javascript"></script>
         <script src='../assets/global/plugins/moment.locate.js' type="text/javascript"></script>
+        
+        <script src='js/plugins/3d/data.js' type="text/javascript"></script>
+        
         <script type="text/javascript">
             $.backstretch([
                 "./css/bg.png"
