--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -113,7 +113,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src="../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
-        <script src="../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+       <!-- <script src="../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>-->
         <script src="../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/bootstrap-toastr/toastr.min.js" type="text/javascript"></script>
         <!-- END CORE JQUERY PLUGINS -->
