--- a/dashboard/tpl/header.html
+++ b/dashboard/tpl/header.html
@@ -31,9 +31,9 @@
 
             <ul class="nav navbar-nav pull-right">
                 <li class="dropdown" ng-if="isLogin">
-                    <span href="#/dashboard" class="dropdown-toggle">
-                        <i class="icon-home font-white"></i>主页
-                    </span>
+                    <a href="#/dashboard" class="dropdown-toggle font-white">
+                        <i class="icon-home font-white"></i> 主页
+                    </a>
                 </li>
 
                 <li class="dropdown " ng-if="isLogin">
