--- a/dashboard/tpl/header.html
+++ b/dashboard/tpl/header.html
@@ -53,8 +53,8 @@
                 
 
                 <li class="dropdown" ng-if="isLogin">
-                    <a ng-click="logInOut(false)" class="dropdown-toggle" alt="登出">
-                        <i class="icon-logout font-white"></i>
+                    <a ng-click="logInOut(false)" class="dropdown-toggle font-white" alt="登出">
+                        <i class="icon-logout font-white"></i> 退出
                     </a>
                 </li>
                 <!-- END QUICK SIDEBAR TOGGLER -->
