--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <!-- 
-Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.6
+Template Name: Sean - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.6
 Version: 4.5.3
 Author: KeenThemes
 Website: http://www.keenthemes.com/
 Contact: support@keenthemes.com
 Follow: www.twitter.com/keenthemes
 Like: www.facebook.com/keenthemes
-Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+Purchase: http://themeforest.net/item/Sean-responsive-admin-dashboard-template/4021469?ref=keenthemes
 License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
 -->
-<!--[if IE 8]> <html lang="en" class="ie8 no-js" data-ng-app="MetronicApp"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9 no-js" data-ng-app="MetronicApp"> <![endif]-->
+<!--[if IE 8]> <html lang="en" class="ie8 no-js" data-ng-app="SeanApp"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9 no-js" data-ng-app="SeanApp"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en" data-ng-app="MetronicApp">
+<html lang="en" data-ng-app="SeanApp">
     <!--<![endif]-->
     <!-- BEGIN HEAD -->
 
@@ -46,7 +46,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <link href="./css/sgm.css" rel="stylesheet" type="text/css" />
         
         <!-- END THEME STYLES -->
-        <link rel="shortcut icon" href="favicon.ico" /> </head>
+         </head>
     <!-- END HEAD -->
     <!-- BEGIN BODY -->
     <!-- DOC: Apply "page-header-fixed-mobile" and "page-footer-fixed-mobile" class to body element to force fixed header or footer in mobile devices -->
@@ -126,8 +126,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src="../assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
         <!-- END CORE ANGULARJS PLUGINS -->
         <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
-        <script src="js/main.js" type="text/javascript"></script>
-        <script src="js/directives.js" type="text/javascript"></script>
+        <script src="js/app.js" type="text/javascript"></script>
         <!-- END APP LEVEL ANGULARJS SCRIPTS -->
         <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
         <script src="../assets/global/scripts/app.min.js" type="text/javascript"></script>
@@ -139,13 +138,13 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src='../assets/global/plugins/moment.locate.js' type="text/javascript"></script>
         
         <script type="text/javascript">
-            $.backstretch([
+            /*$.backstretch([
                 "./css/bg.png"
                 ], {
                   fade: 1000,
                   duration: 20000
                 }
-            );
+            );*/
         </script>
         <!-- END APP LEVEL JQUERY SCRIPTS -->
         <!-- END JAVASCRIPTS -->
