--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -124,9 +124,15 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src="../assets/global/plugins/angularjs/plugins/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
+
+        <script src='../assets/global/plugins/jquery-validation/js/jquery.validate.min.js'  type="text/javascript"></script>
+        <script src='../assets/global/plugins/jquery-validation/js/additional-methods.min.js'  type="text/javascript"></script>
+        <script src='../assets/global/plugins/jpkleemans-angular-validate/dist/angular-validate.min.js'  type="text/javascript"></script>
         <!-- END CORE ANGULARJS PLUGINS -->
         <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
         <script src="js/app.js" type="text/javascript"></script>
+        <script src="js/controllers.js" type="text/javascript"></script>
+        <script src="js/templates.js" type="text/javascript"></script>
         <!-- END APP LEVEL ANGULARJS SCRIPTS -->
         <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
         <script src="../assets/global/scripts/app.min.js" type="text/javascript"></script>
