--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -136,7 +136,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <!-- END APP LEVEL ANGULARJS SCRIPTS -->
         <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
         <script src="../assets/global/scripts/app.min.js" type="text/javascript"></script>
-        <script src="../assets/layouts/layout/scripts/layout.js" type="text/javascript"></script>
+        <script src="../assets/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
         <script src="../assets/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/backstretch/jquery.backstretch.min.js" type="text/javascript"></script>
         <script src='../assets/global/plugins/moment.min.js' type="text/javascript"></script>
